# garbage_Detection_model

./: .gitignore  app.py  dockerfile  pyproject.toml  railway.json  railway.toml  requirements.txt  start.sh
templates/: index.html
