[tool.poetry]
name = "my-fastapi-app"
version = "0.1.0"
description = ""
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.95.2"
uvicorn = "0.22.0"
opencv-python-headless = "4.5.5.62"
ultralytics = "8.0.0"
pillow = "9.0.0"
jinja2 = "3.1.2"
python-multipart = "0.0.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

