[tool.poetry]
name = "my_fastapi_app"
version = "0.1.0"
description = "A FastAPI application with YOLO model"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"
numpy = "^1.23.5"
opencv-python-headless = "^4.7.0"
pillow = "^8.3.1"
jinja2 = "^3.0.1"
ultralytics = "^8.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"